[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
bitreader = "0.3.6"
bitter = "0.6.1"
byteorder = "1.4.3"
glium = "*"
glm = "0.2.3"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
slog-json = "2.3.0"
lazy_static = "1.4.0"
chrono ="0.4.19"
regex = "1.4.3"
arr_macro = "*"
std_tools = "0.1.4"
imgui = "0.9.0"
imgui-glium-renderer = "0.9.0"
